--- a/templates/forum/find/topic.html
+++ b/templates/forum/find/topic.html
@@ -1,5 +1,5 @@
 {% extends "forum/base.html" %}
-{% load humanize %}
+{% load date %}
 {% load profile %}
 {% load emarkdown %}
 
@@ -48,7 +48,7 @@
                     </div>
                 </td>
                 <td>
-                    {{ topic.pubdate|naturaltime }}
+                    {{ topic.pubdate|format_date }}
                 </td>
                 <td>
                     {{ topic.first_post.text|truncatechars:200|emarkdown|striptags }}
