--- a/templates/gallery/base.html
+++ b/templates/gallery/base.html
@@ -16,22 +16,10 @@
 
 {% block sidebar %}
     <aside class="sidebar mobile-menu-hide">
-        <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
-            <h3>Actions</h3>
-            <ul>
-                <li>
-                    <a href="{% url "zds.gallery.views.gallery_list" %}">
-                        Liste des galeries
-                    </a>
-                </li>
-                <li>
-                    <a href="{% url "zds.gallery.views.new_gallery" %}">
-                        Ajouter une galerie
-                    </a>
-                </li>
-                
-                {% block sidebar_actions %}{% endblock %}
-            </ul>
-        </div>
+        {% block new_btn %}{% endblock %}
+
+        <a href="{% url "zds.gallery.views.new_gallery" %}" class="new-btn ico-after more blue">
+            Ajouter une galerie
+        </a>
     </aside>
 {% endblock %}
