--- a/templates/gallery/image/new.html
+++ b/templates/gallery/image/new.html
@@ -21,13 +21,13 @@
 {% endblock %}
 
 
-{% block sidebar_actions %}
-    <li>
-    	<a href="{% url "zds.gallery.views.new_image" gallery.pk %}">
-    		Ajouter une image
-    	</a>
-    </li>
+
+{% block new_btn %}
+    <a href="{% url "zds.gallery.views.new_image" gallery.pk %}" class="new-btn ico-after more blue">
+        Ajouter une image
+    </a>
 {% endblock %}
+
 
 
 {% block content %}
