--- a/templates/forum/base.html
+++ b/templates/forum/base.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load interventions %}
 {% load captureas %}
-{% load humanize %}
+{% load date %}
 {% load profile %}
 
 
@@ -53,6 +53,8 @@
                     </ul>
                 </div>
             {% endif %}
+
+            {% block sidebar_blocks %}{% endblock %}
 
             <div class="mobile-menu-bloc mobile-all-links" data-title="Sujets suivis">
                 <h3>Sujets suivis</h3>
@@ -112,7 +114,7 @@
                                                     <img src="{{ profile.get_avatar_url }}" alt="" class="avatar">
                                                 {% endwith %}
                                                 Dernière réponse
-                                                {{ answer.pubdate|naturaltime }}
+                                                {{ answer.pubdate|format_date }}
                                                 par
                                                 {{ answer.author.username }}
                                             {% else %}
