--- a/templates/tutorial/validation/history.html
+++ b/templates/tutorial/validation/history.html
@@ -1,5 +1,5 @@
 {% extends "tutorial/validation/index.html" %}
-{% load humanize %}
+{% load date %}
 
 
 
@@ -54,7 +54,7 @@
                             {% endfor %}
                         </td>
                         <td>
-                            <span>{{ validation.date_proposition|naturaltime }}</span>
+                            <span>{{ validation.date_proposition|format_date|capfirst }}</span>
                         </td>
                         <td>
                             {% if validation.validator %}
@@ -63,7 +63,7 @@
                         </td>
                         <td>
                             {% if validation.date_reserve %}
-                                <span>{{ validation.date_reserve|naturaltime }}</span>
+                                <span>{{ validation.date_reserve|format_date|capfirst }}</span>
                             {% endif %}
                         </td>
                         <td>
