--- a/templates/tutorial/validation/index.html
+++ b/templates/tutorial/validation/index.html
@@ -1,5 +1,5 @@
 {% extends "tutorial/base_online.html" %}
-{% load humanize %}
+{% load date %}
 
 
 
@@ -78,7 +78,7 @@
                             {% endfor %}
                         </td>
                         <td>
-                            <span>{{ validation.date_proposition|naturaltime }}</span>
+                            <span>{{ validation.date_proposition|format_date|capfirst }}</span>
                         </td>
                         <td>
                             {% if validation.validator %}
@@ -87,7 +87,7 @@
                         </td>
                         <td>
                             {% if validation.date_reserve %}
-                                <span>{{ validation.date_reserve|naturaltime }}</span>
+                                <span>{{ validation.date_reserve|format_date|capfirst }}</span>
                             {% endif %}
                         </td>
                         <td>
