Issue #575 : Forcer réservation tuto

--- a/templates/tutorial/validation.html
+++ b/templates/tutorial/validation.html
@@ -79,7 +79,7 @@
                     </td>
                     <td>
                         {% if validation.is_pending %}
-                        <a href="{% url "zds.tutorial.views.reservation" validation.pk %}">Réservé</a>
+                        <a href="{% url "zds.tutorial.views.reservation" validation.pk %}">Réserver</a>
                         {% elif validation.is_pending_valid %}
                         <a href="{% url "zds.tutorial.views.reservation" validation.pk %}">Se retirer</a>
                         {% elif validation.is_accept %}
