--- a/assets/css/scss/_all-supports.scss
+++ b/assets/css/scss/_all-supports.scss
@@ -899,7 +899,7 @@
    ============== */
 .tutorial-list article,
 .main .article-content .tutorial-list article {
-    height: 60px;
+    min-height: 60px;
     padding: 20px 2%;
     border-bottom: 1px solid #e0e4e5;
 
@@ -922,6 +922,10 @@
         padding: 0;
         font-size: 20px;
         font-size: 2.0rem;
+        width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
     }
     a {
         text-decoration: none;
@@ -934,6 +938,11 @@
 
         a {
             color: #ee8709;
+
+            &:hover,
+            &:focus {
+                text-decoration: underline;
+            }
         }
     }
 
@@ -953,7 +962,7 @@
         }
     }
     .resume {
-        margin: 7px 0 0;
+        margin: 20px 0 0;
         padding: 0;
     }
 
@@ -1271,12 +1280,12 @@
         }
     }
     .topic-answers {
-        width: 15%;
+        width: 12%;
         text-align: center;
         padding-top: 25px;
     }
     .topic-last-answer {
-        width: 15%;
+        width: 18%;
 
         .topic-no-last-answer {
             display: block;
