--- a/templates/home.html
+++ b/templates/home.html
@@ -53,7 +53,7 @@
 
 {# Content #}
 {% block content_out %}
-    <section class="content-col-2 tutorial-list article-list">
+    <section class="content-col-2 tutorial-list">
         <h2 class="ico-after ico-articles">Derniers Articles</h2>
 
         {% if last_articles %}
