--- a/templates/base_content_page.html
+++ b/templates/base_content_page.html
@@ -10,6 +10,7 @@
         <section class="article-content">
             {% block content %}{% endblock %}
         </section>
+        {% block content_after %}{% endblock %}
     </article>
 {% endblock %}
 
