Maj de la page A Propos (lien GH)

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -14,7 +14,7 @@
 
 {% block content %}
     <div class="large-12 columns">
-  		<p>Si vous vous intéressez à tout cela, vous devriez songer à <a href="https://github.com/Taluu/ZesteDeSavoir">contribuer au développement du site</a> !</p>
+  		<p>Si vous vous intéressez à tout cela, vous devriez songer à <a href="https://github.com/zestedesavoir/zds-site">contribuer au développement du site</a> !</p>
     </div>
     <div class="large-4 columns">
         <h3>Copyrights</h3>
